# Practica-PRO2

./: .gitignore  CMakeLists.txt  doxyfile.conf  entrega.sh  mainpage.dox  makefile  notas.txt
delme/: courses.cc  main.cc  problem.cc  problems.cc  sessions.cc
doc/html/: BinTree_8hh_source.html  annotated.html  classBinTree-members.html  classBinTree.html  classCourse-members.html  classCourse.html  classCourses-members.html  classCourses.html  classEvaluator-members.html  classEvaluator.html  classProblem-members.html  classProblem.html  classProblem__repo-members.html  classProblem__repo.html  classSession-members.html  classSession.html  classSessions-members.html  classSessions.html  classUser-members.html  classUser.html  classUsers-members.html  classUsers.html  classes.html  commands_8hh.html  commands_8hh__incl.map  commands_8hh__incl.md5  commands_8hh_source.html  courses_8hh.html  courses_8hh__dep__incl.map  courses_8hh__dep__incl.md5  courses_8hh__incl.map  courses_8hh__incl.md5  courses_8hh_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_d44c64559bbebec7f509842c48db8b23.html  evaluator_8hh_source.html  files.html  functions.html  functions_func.html  (+17 more)
doc/latex/: annotated.tex  classBinTree.tex  classCourse.tex  classCourses.tex  classEvaluator.tex  classProblem.tex  classProblem__repo.tex  classSession.tex  classSessions.tex  classUser.tex  classUsers.tex  commands_8hh.tex  commands_8hh__incl.md5  courses_8hh.tex  courses_8hh__dep__incl.md5  (+12 more)
src/: CMakeLists.txt  Session.vim  header_plus_definition.vim
(+48 files in other folders)
